test/it/code-samples/negative/pages-bad-usage-of-existing-prop-on-container-children/pageCode.js
$w("#box1").children.forEach(child => {
  child.onMouseIn("notAFunction")
});
